# AGENTleBot

./: .envrc  .gitignore  README.md  main.py  mypy.ini  pyproject.toml
agent/: agent.py  models.py  prompts.py
completions/: flows.py  models.py
config/: config.py
